--- a/package.json
+++ b/package.json
@@ -20,25 +20,23 @@
   },
   "homepage": "https://github.com/bookingcom/powercalculator#readme",
   "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "eslint-plugin-vue": "^4.3.0",
-    "jStat": "^1.7.1",
-    "jest": "^22.4.2",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "babel-jest": "^26.0.1",
+    "eslint-plugin-vue": "^6.2.2",
+    "jest": "^26.0.1",
+    "jstat": "^1.9.3",
     "rands": "^1.0.0",
-    "rollup-plugin-commonjs": "^8.2.6",
-    "rollup-plugin-css-only": "^0.2.0",
-    "rollup-plugin-eslint": "^4.0.0",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-vue": "^2.5.2",
+    "regenerator-runtime": "^0.13.5",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-css-only": "^2.0.0",
+    "rollup-plugin-eslint": "^7.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-vue": "^5.1.9",
     "vue": "^2.5.6",
-    "vuex": "^3.0.1",
     "vue-template-compiler": "^2.5.6",
-    "babel-core": "^6.26.0",
-    "babel-jest": "^22.4.1",
-    "regenerator-runtime": "^0.11.1"
+    "vuex": "^3.0.1"
   },
   "jest": {
     "testURL": "http://localhost/"
