--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "babel-jest": "^26.0.1",
+    "cryptiles": "^4.1.3",
     "eslint-plugin-vue": "^6.2.2",
     "jest": "^26.0.1",
     "jstat": "^1.9.3",
